fix: put/delete in pongapp

--- a/services/nginx/frontend/css/style.css
+++ b/services/nginx/frontend/css/style.css
@@ -4,6 +4,13 @@ html {
 	text-align: center;
 }
 
+body {
+	background-image: url('../images/Site/BG.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
+
 p {
 	font-family: 'Avenir';
 	text-align: justify;
